# minDL

./: .gitignore  CMakeLists.txt  LICENCE
include/minidl/: allocator.h  dtype.h  indexing.h  ops.h  shape.h  tensor.h
include/minidl/allocators/: default.h  system_allocator.h
include/minidl/detail/: binary_ops.h  broadcasting.h  dispatch.h  iter.h  kenerls_pointwise.h  kernels_pointwise.h  layout.h
src/: CMakeLists.txt  tensor.cpp
src/detail/: iter.cpp  layout.cpp
src/kernels/: kernels_pointwise.cpp
src/ops/: kernels_pointwise.cpp  pointwise.cpp
src/tensor/: tensor_core.cpp  tensor_factories.cpp  tensor_view.cpp
tests/: CMakeLists.txt  broadcasting_test.cpp  iter_test.cpp  layout_test.cpp  tensor_basic_tests.cpp  tensor_factories_test.cpp  tensor_factory_tests.cpp  tensor_operator_tests.cpp  tensor_shape_manipulation_test.cpp  tensor_view_test.cpp  test_binary_ops.cpp  test_pointwise.cpp
